--- a/OrderDesk.htm
+++ b/OrderDesk.htm
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>- ORDER -</title>
+<title>Bio POD - Order Menu</title>
 <style>
 	.ylw{color: #ffdd71ff;}
 	.btn_grn{background-color: lime;}
